@@ -1,14 +1,7 @@
-/*
- * This file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java application project to get you started.
- * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.0.0/userguide/building_java_projects.html in the Gradle documentation.
- */
-
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
-    id("org.beryx.jlink") version "3.1.4-rc"
+    id "org.beryx.jlink" version "3.1.3"
 
 }
 
@@ -18,19 +11,15 @@ repositories {
 }
 
 dependencies {
-    // Use JUnit Jupiter for testing.
     testImplementation libs.junit.jupiter
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
-    // This dependency is used by the application.
     implementation libs.guava
 }
 
-// Apply a specific Java toolchain to ease working on different environments.
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(25)
     }
 }
 
@@ -45,10 +34,21 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 jlink {
+    // Java 25 ではデフォルトで適切な modules を検討してくれる
+    addExtraDependencies("java.management")
+
     launcher {
-        name = "MyApp"
+        name = 'MyApp'
+        jvmArgs = [
+            // 必要ならここへ
+            '--enable-preview'
+        ]
     }
+
     jpackage {
         skipInstaller = true
+        imageOptions = [
+            '--win-console'
+        ]
     }
 }
